[tool.poetry]
name = "willywonka"
version = "0.0.0"
description = "Python package that contains a lot of sweetness for data practitioners such as ML-ops type thiings"
authors = ["Bastien Boutonnet <bastien.b1@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.7.1"
Faker = "^8.0.0"
pandas = "^1.2.3"
SQLAlchemy = "^1.4.7"
psycopg2 = "^2.8.6"

[tool.poetry.dev-dependencies]
pre-commit = "^2.12.0"
black = "^20.8b1"
flake8 = "^3.9.0"
mypy = "^0.812"
pytest = "^6.2.3"
pytest-cov = "^2.11.1"
towncrier = "^21.3.0"
pytest-mock = "^3.5.1"
tox-poetry-installer = "^0.6.4"
tox = "^3.23.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
